--- a/kodi_library_movies.html
+++ b/kodi_library_movies.html
@@ -1,6 +1,6 @@
 
             <html>
-                <head><title>Kodi Library</title></head>
+                <head><title>Kodi Library (Movies)</title></head>
                 <style type="text/css">
                     #movieview { width: 750px; 
                                  padding-left: 80px;
