modify index: links to movies/tvshows/music(soon) lists

--- a/index.html
+++ b/index.html
@@ -2,14 +2,22 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=http://kodi.builttowill.site/kodi_library.html">
-        <script type="text/javascript">
-            window.location.href = "http://kodi.builttowill.site/kodi_library.html"
-        </script>
-        <title>Page Redirection</title>
+        <title>Media Library Lists</title>
+        <style type="text/css">
+            .media-types { font-size: 1.4em;
+                     font-weight: bold;
+                     margin: 50px;
+                   }
+            .media-types li { margin: 30px 0; }
+        </style>
     </head>
     <body>
-        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='http://kodi.builttowill.site/kodi_library.html'>link</a>.
+        <div class="media-types" >
+            <ul>
+                <li><a href="kodi_library_movies.html" >Movies</a></li>
+                <li><a href="kodi_library_tvshows.html" >TVShows</a></li>
+                <li>Music (coming soon)</li>
+            </ul>
+        </div>
     </body>
 </html>
