--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="kodi_library_movies.html" >Movies</a></li>
                 <li><a href="kodi_library_tvshows.html" >TVShows</a></li>
-                <li>Music (coming soon)</li>
+                <li><a href="music_list.html" >Music</a></li>
             </ul>
         </div>
     </body>
