--- a/music_list.html
+++ b/music_list.html
@@ -18,6 +18,7 @@ Adam.Sandler-What.The.Hell.Happened.To.Me.mp3f  <br />
 Akrobatik - The EP.flac_mp3f  <br />
 Allen, Woody - Standup Comic.m4af  <br />
 allman.brothers.band-eat.a.peach.mp3f
+allman.brothers.band-at.fillmore.east.mp3f
 Allman Brothers Band, The - 1970-07-03 - Live At The Atlanta International Pop Festival.flac_mp3f  <br />
 Allman Brothers Band, The - 1970-07-05 - Live At The Atlanta International Pop Festival.flac_mp3f  <br />
 Allman Brothers Band, The - Lost Warehouse Tapes, The - mp3.f  <br />
