add music artists list

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <ul>
                 <li><a href="kodi_library_movies.html" >Movies</a></li>
                 <li><a href="kodi_library_tvshows.html" >TVShows</a></li>
-                <li><a href="music_list.html" >Music</a></li>
+                <li><a href="music_artists.html" >Music: Artists (partial)</a></li>
+                <li><a href="music_artists-albums.html" >Music: All Artists/Albums (partial)</a></li>
             </ul>
         </div>
     </body>
