--- a/music_artists-albums.html
+++ b/music_artists-albums.html
@@ -1,16 +1,17 @@
+<!DOCTYPE HTML>
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <title>Music List (partial)</title>
+        <title>Music: All Artists/Albums</title>
         <style type="text/css">
-            .music-list {
+            .main-content { 
                 font-size: 1.1em;
+                margin: 20px;
             }
         </style>
     </head>
     <body>
-
-        <div class="music-list" >
+        <div class="main-content" >
 
 8&#x27; Flourescent Tubes - 1998-04-17 - Winooski, VT.flac_mp3f  <br />
 Adam.Sandler-They&#x27;re.All.Gonna.Laugh.at.You.mp3f  <br />
